[package]
name = "hylarana-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4", features = ["derive"] }
log = "0.4.20"
parking_lot = "0.12"
hylarana = { path = "../../hylarana", version = "0.1" }
hylarana-common = { path = "../../common", version = "0.1" }
winit = "0.30.5"
simple_logger = "5"
