[package]
name = "mirror-desktop"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "mirror"

[dependencies]
anyhow = "1.0.82"
bytes = "1.5"
fern = { version = "0.6.2", features = ["date-based", "colored", "syslog-6"]}
log = "0.4.20"
jni = "0.21.1"
num_cpus = "1.16.0"
chrono = { version = "0.4", features = ["clock", "alloc"] }
utils = { path = "../../common/utils" }
frame = { path = "../../common/frame" }
transport = { path = "../../transport" }
jni-macro = { path = "../../common/jni-macro" }

[target.'cfg(target_os = "linux")'.dependencies]
syslog = "6"

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
codec = { path = "../../codec" }
capture = { path = "../../capture" }
mirror = { path = "../../mirror" }

[features]
dx11 = ["mirror/dx11"]
