[package]
name = "mirror"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "mirror"

[dependencies]
bytes = "1.5"
utils = { path = "../../utils" }
frame = { path = "../../frame" }
codec = { path = "../../codec", default-features = false }
transport = { path = "../../transport" }
log = "0.4.20"
anyhow = "1.0.82"

[target.'cfg(not(target_os = "macos"))'.dependencies]
capture = { path = "../../capture" }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.57.0"
features = ["Win32", "Win32_System", "Win32_System_Threading"]
