[package]
name = "mirror"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "mirror"

[dependencies]
anyhow = "1.0.82"
bytes = "1.5"
crossbeam = "0.8"
utils = { path = "../../utils" }
frame = { path = "../../media/frame" }
codec = { path = "../../media/codec", default-features = false }
transport = { path = "../../transport" }
log = "0.4.20"

[target.'cfg(not(target_os = "macos"))'.dependencies]
capture = { path = "../../media/capture" }
